--- a/src/app/main/references/reference-card/reference-card.scss
+++ b/src/app/main/references/reference-card/reference-card.scss
@@ -37,6 +37,10 @@
   blockquote {
     margin: 0;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    height: 100%;
 
     .reference-text {
       font-family: 'Karla', sans-serif;
@@ -46,6 +50,7 @@
       line-height: 120%;
       color: rgba(255, 255, 255, 0.8);
       margin: 0 0 44px 0;
+      flex: 1;
     }
 
     footer {
@@ -53,6 +58,7 @@
       flex-direction: row;
       align-items: center;
       gap: 16px;
+      margin-top: auto;
 
       &::before {
         content: '';
