fix: content limit, background rendering, and imprint/privacy restart issues resolved

--- a/src/app/main/contact/contact-form/contact-form.scss
+++ b/src/app/main/contact/contact-form/contact-form.scss
@@ -173,8 +173,28 @@ $transition-fast: 0.2s ease;
     color: $text-color-light;
   }
 
+  &:-webkit-autofill,
+  &:-webkit-autofill:hover,
+  &:-webkit-autofill:focus,
+  &:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
+    -webkit-text-fill-color: $text-color-light !important;
+    background-color: transparent !important;
+    background-clip: text !important;
+    transition: background-color 5000s ease-in-out 0s;
+    font-family: $font-primary;
+    font-size: 18px;
+  }
+
   @media (max-width: $breakpoint-tablet) {
     font-size: 16px;
+
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover,
+    &:-webkit-autofill:focus,
+    &:-webkit-autofill:active {
+      font-size: 16px;
+    }
   }
 }
 
