--- a/src/app/main/skills/skills.scss
+++ b/src/app/main/skills/skills.scss
@@ -2,7 +2,7 @@
   max-width: 1920px;
   margin: 0 auto;
   box-sizing: border-box;
-  scroll-margin-top: clamp(5rem, 8vw, 8rem);
+  scroll-margin-top: clamp(2rem, 4vw, 4rem);
 
   &__inner {
     position: relative;
@@ -21,6 +21,22 @@
       #1c1c1c 100%
     );
     box-sizing: border-box;
+
+    @media (min-width: 1921px) {
+      background: radial-gradient(
+        22.43% 43.85% at 18% 52.45%,
+        rgba(8, 70, 59, 0.3) 0%,
+        #1c1c1c 100%
+      );
+    }
+
+    @media (min-width: 2400px) {
+      background: radial-gradient(
+        22.43% 43.85% at 25% 52.45%,
+        rgba(8, 70, 59, 0.3) 0%,
+        #1c1c1c 100%
+      );
+    }
   }
 
   &__panel {
