--- a/src/app/main/about-me/photo/photo.scss
+++ b/src/app/main/about-me/photo/photo.scss
@@ -49,3 +49,10 @@
   height: 100%;
   object-fit: cover;
 }
+
+@media (min-width: 1920px) {
+  .about-me__photo {
+    width: 100%;
+    max-width: 700px;
+  }
+}
