--- a/src/app/main/contact/contact-info/contact-info.scss
+++ b/src/app/main/contact/contact-info/contact-info.scss
@@ -17,6 +17,11 @@ $line-height-default: 120%;
   gap: $gap-large;
   width: 100%;
   max-width: 568px;
+
+  @media (min-width: 1920px) {
+    max-width: 650px;
+    gap: 48px;
+  }
 }
 
 .header-section {
@@ -48,6 +53,10 @@ $line-height-default: 120%;
   line-height: 100%;
   letter-spacing: -0.03em;
   color: $primary-color;
+
+  @media (min-width: 1920px) {
+    font-size: 72px;
+  }
 
   @media (max-width: $breakpoint-tablet) {
     font-size: 48px;
@@ -88,6 +97,10 @@ $line-height-default: 120%;
   line-height: $line-height-default;
   color: $primary-color;
 
+  @media (min-width: 1920px) {
+    font-size: 28px;
+  }
+
   @media (max-width: $breakpoint-tablet) {
     font-size: 20px;
   }
@@ -105,6 +118,11 @@ $line-height-default: 120%;
 
   strong {
     font-weight: 700;
+  }
+
+  @media (min-width: 1920px) {
+    font-size: 18px;
+    line-height: 140%;
   }
 
   @media (max-width: $breakpoint-tablet) {
