--- a/src/app/shared/privacy-policy/privacy-policy.scss
+++ b/src/app/shared/privacy-policy/privacy-policy.scss
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0;
+  padding: 0 0 80px 0;
   gap: 64px;
   max-width: 1248px;
   width: 100%;
@@ -179,6 +179,38 @@
 
     p {
       font-size: 14px;
+    }
+  }
+}
+
+@media (min-width: 1441px) {
+  .privacy-policy-container {
+    max-width: 1600px;
+    margin-top: 180px;
+    gap: 80px;
+    padding-bottom: 100px;
+  }
+
+  .privacy-policy-title {
+    font-size: 72px;
+  }
+
+  .text-content {
+    padding: 0 160px;
+    gap: 32px;
+  }
+
+  .text-section {
+    max-width: 1200px;
+    gap: 20px;
+
+    h2 {
+      font-size: 22px;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 140%;
     }
   }
 }
