--- a/src/app/shared/legal-notice/legal-notice.scss
+++ b/src/app/shared/legal-notice/legal-notice.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-height: 100vh;
+  min-height: 100dvh;
   background: linear-gradient(55.22deg, #1c1c1c 36.26%, #08463b 93.28%);
   overflow-y: auto;
 }
