--- a/src/app/main/projects/project-dialog/project-dialog.scss
+++ b/src/app/main/projects/project-dialog/project-dialog.scss
@@ -98,6 +98,7 @@ $accent: #3dcfb6;
 .dialog__visual {
   position: relative;
   align-self: center;
+  justify-self: center;
   width: 100%;
   max-width: 32.5rem;
   height: auto;
@@ -115,6 +116,7 @@ $accent: #3dcfb6;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center center;
 }
 
 .dialog__next {
